MinigopherGrammarParser.py
# Generated from MinigopherGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MinigopherGrammarParser ( Parser ):

    grammarFileName = "MinigopherGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'='", "';'", "':='", "'const'", 
                     "'int'", "'float'", "'bool'", "'func'", "'main'", "'('", 
                     "')'", "'{'", "'}'", "','", "'scan'", "'print'", "'for'", 
                     "'while'", "'if'", "'else'", "'switch'", "'case'", 
                     "':'", "'default'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'**'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'true'", "'false'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "UnsignedInt", "Identifier", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_variableDecl = 2
    RULE_shortVariableDecl = 3
    RULE_constDecl = 4
    RULE_typeSpec = 5
    RULE_mainSection = 6
    RULE_statement = 7
    RULE_block = 8
    RULE_doBlock = 9
    RULE_assignmentStmt = 10
    RULE_identifierList = 11
    RULE_expressionList = 12
    RULE_inputStmt = 13
    RULE_outputStmt = 14
    RULE_forStmt = 15
    RULE_whileStmt = 16
    RULE_ifStmt = 17
    RULE_switchStmt = 18
    RULE_caseClause = 19
    RULE_defaultClause = 20
    RULE_expression = 21
    RULE_boolExpression = 22
    RULE_boolPrimary = 23
    RULE_arithmExpression = 24
    RULE_term = 25
    RULE_factor = 26
    RULE_primary = 27
    RULE_addOp = 28
    RULE_multOp = 29
    RULE_powerOp = 30
    RULE_relOp = 31
    RULE_const = 32
    RULE_numConst = 33
    RULE_boolConst = 34
    RULE_intNumber = 35
    RULE_floatNumber = 36
    RULE_sign = 37

    ruleNames =  [ "program", "declaration", "variableDecl", "shortVariableDecl", 
                   "constDecl", "typeSpec", "mainSection", "statement", 
                   "block", "doBlock", "assignmentStmt", "identifierList", 
                   "expressionList", "inputStmt", "outputStmt", "forStmt", 
                   "whileStmt", "ifStmt", "switchStmt", "caseClause", "defaultClause", 
                   "expression", "boolExpression", "boolPrimary", "arithmExpression", 
                   "term", "factor", "primary", "addOp", "multOp", "powerOp", 
                   "relOp", "const", "numConst", "boolConst", "intNumber", 
                   "floatNumber", "sign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    UnsignedInt=41
    Identifier=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainSection(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.MainSectionContext,0)


        def EOF(self):
            return self.getToken(MinigopherGrammarParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MinigopherGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4398046511138) != 0):
                self.state = 76
                self.declaration()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.mainSection()
            self.state = 83
            self.match(MinigopherGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.VariableDeclContext,0)


        def shortVariableDecl(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ShortVariableDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ConstDeclContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MinigopherGrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.variableDecl()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.shortVariableDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.constDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MinigopherGrammarParser.Identifier, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.TypeSpecContext,0)


        def expression(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = MinigopherGrammarParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MinigopherGrammarParser.T__0)
            self.state = 91
            self.match(MinigopherGrammarParser.Identifier)
            self.state = 92
            self.typeSpec()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 93
                self.match(MinigopherGrammarParser.T__1)
                self.state = 94
                self.expression()


            self.state = 97
            self.match(MinigopherGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortVariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MinigopherGrammarParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_shortVariableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortVariableDecl" ):
                listener.enterShortVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortVariableDecl" ):
                listener.exitShortVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortVariableDecl" ):
                return visitor.visitShortVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def shortVariableDecl(self):

        localctx = MinigopherGrammarParser.ShortVariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_shortVariableDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MinigopherGrammarParser.Identifier)
            self.state = 100
            self.match(MinigopherGrammarParser.T__3)
            self.state = 101
            self.expression()
            self.state = 102
            self.match(MinigopherGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MinigopherGrammarParser.Identifier, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.TypeSpecContext,0)


        def expression(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = MinigopherGrammarParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MinigopherGrammarParser.T__4)
            self.state = 105
            self.match(MinigopherGrammarParser.Identifier)
            self.state = 106
            self.typeSpec()
            self.state = 107
            self.match(MinigopherGrammarParser.T__1)
            self.state = 108
            self.expression()
            self.state = 109
            self.match(MinigopherGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_typeSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpec" ):
                listener.enterTypeSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpec" ):
                listener.exitTypeSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpec" ):
                return visitor.visitTypeSpec(self)
            else:
                return visitor.visitChildren(self)




    def typeSpec(self):

        localctx = MinigopherGrammarParser.TypeSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_mainSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainSection" ):
                listener.enterMainSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainSection" ):
                listener.exitMainSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainSection" ):
                return visitor.visitMainSection(self)
            else:
                return visitor.visitChildren(self)




    def mainSection(self):

        localctx = MinigopherGrammarParser.MainSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mainSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MinigopherGrammarParser.T__8)
            self.state = 114
            self.match(MinigopherGrammarParser.T__9)
            self.state = 115
            self.match(MinigopherGrammarParser.T__10)
            self.state = 116
            self.match(MinigopherGrammarParser.T__11)
            self.state = 117
            self.match(MinigopherGrammarParser.T__12)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 118
                    self.statement() 
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4398052737058) != 0):
                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 125
                    self.declaration()
                    pass


                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(MinigopherGrammarParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.AssignmentStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.InputStmtContext,0)


        def outputStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.OutputStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.WhileStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.IfStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.SwitchStmtContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MinigopherGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.assignmentStmt()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.inputStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.outputStmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.forStmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.whileStmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.ifStmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 7)
                self.state = 139
                self.switchStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MinigopherGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MinigopherGrammarParser.T__12)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4398052737058) != 0):
                self.state = 145
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 143
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 144
                    self.declaration()
                    pass


                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(MinigopherGrammarParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.StatementContext,0)


        def block(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.BlockContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_doBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoBlock" ):
                listener.enterDoBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoBlock" ):
                listener.exitDoBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoBlock" ):
                return visitor.visitDoBlock(self)
            else:
                return visitor.visitChildren(self)




    def doBlock(self):

        localctx = MinigopherGrammarParser.DoBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_doBlock)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17, 18, 19, 20, 22, 42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.statement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MinigopherGrammarParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_assignmentStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStmt" ):
                listener.enterAssignmentStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStmt" ):
                listener.exitAssignmentStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStmt" ):
                return visitor.visitAssignmentStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStmt(self):

        localctx = MinigopherGrammarParser.AssignmentStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignmentStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MinigopherGrammarParser.Identifier)
            self.state = 157
            self.match(MinigopherGrammarParser.T__1)
            self.state = 158
            self.expression()
            self.state = 159
            self.match(MinigopherGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MinigopherGrammarParser.Identifier)
            else:
                return self.getToken(MinigopherGrammarParser.Identifier, i)

        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = MinigopherGrammarParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MinigopherGrammarParser.Identifier)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 162
                self.match(MinigopherGrammarParser.T__14)
                self.state = 163
                self.match(MinigopherGrammarParser.Identifier)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinigopherGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MinigopherGrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = MinigopherGrammarParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expression()
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 170
                self.match(MinigopherGrammarParser.T__14)
                self.state = 171
                self.expression()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MinigopherGrammarParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return MinigopherGrammarParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStmt" ):
                return visitor.visitInputStmt(self)
            else:
                return visitor.visitChildren(self)




    def inputStmt(self):
